[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-elm"
version = "0.1.0"
description = "Small ELM327 library for serial OBD/CAN adapters."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["pyserial"]

[tool.setuptools]
py-modules = ["simple_elm"]
